website/versioned_docs/version-0.30.0/gitopssets/gitopssets-installation.mdx
---
title: Installation
hide_title: true
---

import TierLabel from "../_components/TierLabel";

# Installation <TierLabel tiers="enterprise" />

The gitopssets-controller can be installed in two ways:

- As part of the Flux-GUI Enterprise installation. (installed by default)
- As a standalone installation using a Helm chart.

The standalone installation can be useful for leaf clusters that don't have Flux-GUI Enterprise installed.

## Prerequisites

Before installing the gitopssets-controller, ensure that you've installed [Flux](https://github.com/fluxcd/flux2).

## Installing the gitopssets-controller

To install the gitopssets-controller using a Helm chart, use the following HelmRelease:

```yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitopssets-system
---
apiVersion: source.toolkit.fluxcd.io/v1beta2
kind: HelmRepository
metadata:
  name: weaveworks-oci-charts
  namespace: gitopssets-system
spec:
  interval: 1m
  type: oci
  url: oci://ghcr.io/weaveworks/charts
---
apiVersion: helm.toolkit.fluxcd.io/v2beta1
kind: HelmRelease
metadata:
  name: gitopssets-controller
  namespace: gitopssets-system
spec:
  interval: 10m
  chart:
    spec:
      chart: gitopssets-controller
      sourceRef:
        kind: HelmRepository
        name: weaveworks-oci-charts
        namespace: gitopssets-system
      version: 0.15.3
  install:
    crds: CreateReplace
  upgrade:
    crds: CreateReplace
```

After adding the Namespace, HelmRepository and HelmRelease to a Git repository synced by Flux, commit the changes to complete the installation process.
